--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Yasin Radi",
   "license": "MIT",
   "devDependencies": {
-    "electron": "~1.6.2"
+    "electron": "~1.6.2",
+    "node-gyp": "^3.6.2"
   },
   "dependencies": {
     "google-translate-api": "^2.3.0",
